<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MovingBall</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="obg_color">Outer background color</string>
    <string name="ibg_color">Inner background color</string>
    <string name="ball_color">Ball color</string>

    <!-- preference settings -->
    <string name="psc_ball_settings">Ball settings</string>
    <string name="ball_v_x">Original x velocity</string>
    <string name="ball_v_y">Original y velocity</string>
    <string name="ball_x">Original x position</string>
    <string name="ball_y">Original y position</string>
    <string name="use_gravity">Use earth gravity</string>
    <string name="use_gravity_summary">Use earth gravity as accelerometer</string>
    <string name="gravity_coefficients">Gravity coefficients</string>
    <string name="gravity_coefficients_summary">How much the gravity affect the ball</string>
    <string name="random_accelerometer">Random accelerometer</string>
    <string name="random_accelerometer_summary">Use random accelerometer</string>
    <string name="max_x_accelerometer">Max x accelerometer</string>
    <string name="max_y_accelerometer">Max y accelerometer</string>
    <string name="max_x_accelerometer_summary">Max x accelerometer for random type</string>
    <string name="max_y_accelerometer_summary">Max y accelerometer for random type</string>
    <string name="accelerometer_x">x accelerometer</string>
    <string name="accelerometer_y">y accelerometer</string>
    <string name="coefficients_of_restitution">Coefficient of restitution</string>
    <string name="coefficients_of_restitution_summary">No larger than 1 and no less than -1.0.</string>
    <string name="ball_color_setting">Ball color</string>
    <string name="ball_radius">Radius</string>
    <string name="psc_board_settings">Game board settings</string>
    <string name="update_time">Handler update time</string>
    <string name="update_time_summary">Handler update time in milli seconds</string>
    <string name="psc_theme">Game theme</string>
    <string name="theme_outer_bg_color">Outer background color</string>
    <string name="theme_inner_bg_color">Inner background color</string>
</resources>
