<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!--<PreferenceCategory>-->
    <!--<CheckBoxPreference-->
    <!--android:key="example_checkbox"-->
    <!--android:title="@string/pref_title_social_recommendations"-->
    <!--android:summary="@string/pref_description_social_recommendations"-->
    <!--android:defaultValue="true" />-->

    <!--&lt;!&ndash; NOTE: EditTextPreference accepts EditText attributes. &ndash;&gt;-->
    <!--&lt;!&ndash; NOTE: EditTextPreference's summary should be set to its value by the activity code. &ndash;&gt;-->
    <!--<EditTextPreference-->
    <!--android:key="example_text"-->
    <!--android:title="@string/pref_title_display_name"-->
    <!--android:defaultValue="@string/pref_default_display_name"-->
    <!--android:selectAllOnFocus="true"-->
    <!--android:inputType="textCapWords"-->
    <!--android:capitalize="words"-->
    <!--android:singleLine="true"-->
    <!--android:maxLines="1" />-->

    <!--&lt;!&ndash; NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to-->
    <!--dismiss it. &ndash;&gt;-->
    <!--&lt;!&ndash; NOTE: ListPreference's summary should be set to its value by the activity code. &ndash;&gt;-->
    <!--<ListPreference-->
    <!--android:key="example_list"-->
    <!--android:title="@string/pref_title_add_friends_to_messages"-->
    <!--android:defaultValue="-1"-->
    <!--android:entries="@array/pref_example_list_titles"-->
    <!--android:entryValues="@array/pref_example_list_values"-->
    <!--android:negativeButtonText="@null"-->
    <!--android:positiveButtonText="@null" />-->
    <!--</PreferenceCategory>-->
    <PreferenceCategory
        android:key="@string/psc_ball_settings"
        android:title="@string/psc_ball_settings">
        <EditTextPreference
            android:key="@string/ball_x"
            android:title="@string/ball_x"
            android:defaultValue="100"
            android:inputType="numberDecimal" />
        <EditTextPreference
            android:key="@string/ball_y"
            android:title="@string/ball_y"
            android:defaultValue="150"
            android:inputType="numberDecimal" />
        <EditTextPreference
            android:key="@string/ball_v_x"
            android:title="@string/ball_v_x"
            android:defaultValue="20"
            android:inputType="numberDecimal" />
        <EditTextPreference
            android:key="@string/ball_v_y"
            android:title="@string/ball_v_y"
            android:defaultValue="40"
            android:inputType="numberDecimal" />
        <EditTextPreference
            android:key="@string/accelerometer_x"
            android:title="@string/accelerometer_x"
            android:defaultValue="0.0"
            android:inputType="numberDecimal" />
        <EditTextPreference
            android:key="@string/accelerometer_y"
            android:title="@string/accelerometer_y"
            android:defaultValue="3.0"
            android:inputType="numberDecimal" />
        <EditTextPreference
            android:key="@string/coefficients_of_restitution"
            android:title="@string/coefficients_of_restitution"
            android:defaultValue="1.0"
            android:inputType="numberDecimal" />
        <EditTextPreference
            android:key="@string/ball_radius"
            android:title="@string/ball_radius"
            android:defaultValue="30"
            android:inputType="numberDecimal" />

        <me.skiloop.game.movingball.colorpicker.ColorPickerPreference
            android:key="@string/ball_color_setting"
            android:title="@string/ball_color_setting"
            android:hint="HEX"
            android:defaultValue="@color/blue" />
        <CheckBoxPreference
            android:key="@string/use_gravity"
            android:title="@string/use_gravity"
            android:summary="@string/use_gravity_summary"
            android:enabled="true" />
        <EditTextPreference android:key="@string/gravity_coefficients"
            android:title="@string/gravity_coefficients"
            android:summary="@string/gravity_coefficients_summary"
            android:inputType="numberSigned"/>
        <CheckBoxPreference android:key="@string/random_accelerometer"
            android:title="@string/random_accelerometer"
            android:summary="@string/random_accelerometer_summary"
            android:enabled="true"
            android:defaultValue="false"/>
        <EditTextPreference
            android:key="@string/max_x_accelerometer"
            android:title="@string/max_x_accelerometer"
            android:summary="@string/max_x_accelerometer_summary"
            android:inputType="numberSigned"/>
        <EditTextPreference
            android:key="@string/max_y_accelerometer"
            android:title="@string/max_y_accelerometer"
            android:summary="@string/max_y_accelerometer_summary"
            android:inputType="numberSigned"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/psc_board_settings"
        android:key="@string/psc_board_settings">

        <EditTextPreference
            android:key="@string/update_time"
            android:title="@string/update_time"
            android:summary="@string/update_time_summary"
            android:defaultValue="150" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="@string/psc_theme"
        android:title="@string/psc_theme">
        <me.skiloop.game.movingball.colorpicker.ColorPickerPreference
            android:key="@string/theme_outer_bg_color"
            android:title="@string/theme_outer_bg_color"
            android:hint="HEX"
            android:defaultValue="@color/red" />
        <me.skiloop.game.movingball.colorpicker.ColorPickerPreference
            android:key="@string/theme_inner_bg_color"
            android:title="@string/theme_inner_bg_color"
            android:hint="HEX"
            android:defaultValue="@color/green" />
    </PreferenceCategory>

</PreferenceScreen>
